<resources>
    <string name="app_name">GameFriends</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="don_t_have_account">Don\'t have account</string>
    <string name="sign_up">Sign Up</string>
    <string name="games_gmail_com" translatable="false">Games@gmail.com</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email" translatable="false">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="password_hints" translatable="false">********</string>
    <string name="or">OR</string>
    <string name="name_hints" translatable="false">John Doe</string>
    <string name="enter_otp_code">Enter Otp Code</string>
    <string name="enter_5_otp_codes_that_have_been_received">Enter 5 OTP codes that have been received</string>
    <string name="you_didn_t_receive_the_code">You didn\'t receive the code?</string>
    <string name="resend_code">Resend Code</string>
    <string name="send_code">Send Code</string>
    <string name="check_your_email">Check Your Email</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="find_your_gaming_squad_and_take_your_friendships_to_the_next_level">find your gaming squad and take your friendships to the next level</string>
    <string name="uprade_your_gameplay_with_your_new_friends">UPRADE YOUR GAMEPLAY WITH YOUR NEW FRIENDS</string>
    <string name="authorize_with_google" translatable="false">Authorize with Google</string>
    <string name="game_played">Game Played</string>
    <string name="describe_yourself">Describe Yourself</string>
    <string name="what_s_game_you_play">What\'s Game you Play ?</string>
    <string name="mobile_legend" translatable="false">Mobile Legend</string>
    <string name="hok" translatable="false">HOK</string>
    <string name="codm" translatable="false">CODM</string>
    <string name="pubg_mobile" translatable="false">PUBG Mobile</string>
    <string name="valorant" translatable="false">Valorant</string>
    <string name="chess" translatable="false">Chess</string>
    <string name="csgo" translatable="false">CSGO</string>
    <string name="fortnite" translatable="false">Fortnite</string>
    <string name="apex_legends" translatable="false">Apex Legends</string>
    <string name="dota_2" translatable="false">Dota 2</string>
    <string name="league_of_legends" translatable="false">League Of Legends</string>
    <string name="genshin_impact" translatable="false">Genshin Impact</string>
    <string name="hobby">Hobby</string>
    <string name="karaoke" translatable="false">Karaoke</string>
    <string name="football" translatable="false">Football</string>
    <string name="futsal" translatable="false">Futsal</string>
    <string name="photography" translatable="false">Photography</string>
    <string name="what_s_your_hobby">What\'s Your Hobby ?</string>
    <string name="swimming">Swimming</string>
    <string name="running">Running</string>
    <string name="music">Music</string>
    <string name="traveling">Traveling</string>
    <string name="shopping">Shopping</string>
    <string name="art">Art</string>
    <string name="cook">Cook</string>
    <string name="what_s_your_gender">What\'s Your Gender ?</string>
    <string name="level_up_your_friendship">LEVEL UP YOUR FRIENDSHIP</string>
    <string name="connect_with_gamers_chat_play_repeat" translatable="false">CONNECT WITH GAMERS, CHAT, PLAY, REPEAT</string>
    <string name="your_location">Your Location ?</string>
    <string name="input_picture">Input Picture</string>
    <string name="enter_3_your_picture" translatable="false">Enter 3 Your Picture ?</string>
    <string name="finish">Finish</string>
    <string name="add_friend_button">Add Friend Button</string>
    <string name="username">Username</string>
    <string name="indonesia" translatable="false">Indonesia</string>
    <string name="female">Female</string>
    <string name="_0_friends" translatable="false">0 Friends</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bio">Bio</string>
    <string name="notification">Notification</string>
    <string name="retry">Retry</string>
    <string name="change_password_instruction">Enter the email address you used when you joined and we’ll send you instructions to reset your password.</string>


    <string-array name="location_array">
        <item>Indonesia</item>
        <item>Malaysia</item>
        <item>Singapura</item>
        <item>Thailand</item>
        <item>Philippines</item>
        <item>Brunei Darussalam</item>
        <item>Vietnam</item>
        <item>Laos</item>
        <item>Myanmar</item>
        <item>Cambodia</item>

    </string-array>

    <string-array name="gender_array">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="general">General</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="report_a_bug">Report a Bug</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="edit_profiles">Edit Profile</string>
    <string name="send">Send</string>
</resources>