<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".ui.bio.hobby.HobbyFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:scaleType="centerCrop"
        android:src="@drawable/backgrounds"/>

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/baseline_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hobbyTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/hobby"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/backButton" />

    <TextView
        android:id="@+id/describetv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/describe_yourself"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hobbyTv" />

    <ImageView
        android:id="@+id/progressDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/dots_one_asset"
        app:layout_constraintEnd_toEndOf="@id/describetv"
        app:layout_constraintStart_toStartOf="@id/describetv"
        app:layout_constraintTop_toBottomOf="@id/describetv" />

    <TextView
        android:id="@+id/wtgYouTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/what_s_your_hobby"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/progressDot"
        app:layout_constraintTop_toBottomOf="@id/progressDot" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/wtgYouTv">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/footballBtn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:backgroundTint="@color/blackLow"
            android:text="@string/football"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:strokeColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/karaokeBtn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:backgroundTint="@color/blackLow"
            android:drawableLeft="@drawable/mic_icon"
            android:drawablePadding="5dp"
            android:text="@string/karaoke"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:strokeColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cookBtn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:backgroundTint="@color/blackLow"
            android:drawableLeft="@drawable/cook_icon"
            android:text="@string/cook"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:strokeColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/artBtn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:backgroundTint="@color/blackLow"
            android:drawableLeft="@drawable/art_icon"
            android:drawablePadding="5dp"
            android:text="@string/art"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:strokeColor="@color/white" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/photoGraphyBtn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:backgroundTint="@color/blackLow"
            android:drawableLeft="@drawable/photography_icon"
            android:drawablePadding="5dp"
            android:text="@string/photography"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/wtgYouTv">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/swimmingBtn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:backgroundTint="@color/blackLow"
            android:drawableLeft="@drawable/swim_icon"
            android:text="@string/swimming"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:strokeColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/runningBtn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:backgroundTint="@color/blackLow"
            android:drawableLeft="@drawable/running_icon"
            android:text="@string/running"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:strokeColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/musicBtn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:backgroundTint="@color/blackLow"
            android:drawableLeft="@drawable/music_icon"
            android:text="@string/music"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:strokeColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/travelingtn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:backgroundTint="@color/blackLow"
            android:drawableLeft="@drawable/travel_icon"
            android:text="@string/traveling"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:strokeColor="@color/white" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/shoppingBtn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:backgroundTint="@color/blackLow"
            android:drawableLeft="@drawable/shop_icon"
            android:text="@string/shopping"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/secondaryColor"
        android:fontFamily="@font/poppins_medium"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/next"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/progressDot"
        app:layout_constraintStart_toStartOf="@id/progressDot" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>