<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingActivityMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/primaryColor"
    tools:context=".ui.setting.SettingActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:src="@drawable/baseline_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/settingsTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsTv"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/accountBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:text="@string/account"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/baseline_person_24_white"
            app:cornerRadius="24dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editProfileBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:text="Edit Profile"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/baseline_mode_edit_24"
            app:cornerRadius="24dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/notificationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:text="@string/notifications"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/baseline_notifications_24"
            app:cornerRadius="24dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/baseline_logout_24"
            app:cornerRadius="24dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteAccountBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:text="Delete Account"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/baseline_restore_from_trash_24"
            app:cornerRadius="24dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send Feedback"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reportBugBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:text="@string/report_a_bug"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/baseline_bug_report_24"
            app:cornerRadius="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendFeedbackBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:text="@string/send_feedback"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/baseline_send_24"
            app:cornerRadius="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>